feat(backend-worker): implement submit
